--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,8 @@
 
         <sortpom-maven-plugin.version>2.5.0</sortpom-maven-plugin.version>
         <!-- Spring properties -->
-        <!-- Spring social -->
-        <spring-social-facebook.version>2.0.3.RELEASE</spring-social-facebook.version>
+        <!-- Spring social 2.0.3.RELEASE upgraded to 3.0.0.M1 -->
+        <spring-social-facebook.version>3.0.0.M1</spring-social-facebook.version>
         <spring-social-google.version>1.0.0.RELEASE</spring-social-google.version>
         <spring-social-security.version>1.1.2.RELEASE</spring-social-security.version>
         <spring-social-twitter.version>1.1.2.RELEASE</spring-social-twitter.version>
